<resources>
    <string name="app_name">SE2-Einzelprojekt</string>
    <string name="matrikelnummer">Matrikelnummer:</string>
    <string name="_11922018">11922018</string>
    <string name="antwort_vom_server">Antwort vom Server:</string>
    <string name="berechneter_wert">Berechneter Wert:</string>
    <string name="senden">Senden</string>
    <string name="matrikelnummer_eingeben">Matrikelnummer eingeben</string>
    <string name="matrikelnummer_eingeben_">Matrikelnummer eingeben:</string>
    <string name="binary">Binary</string>
    <string name="quersumme_der_matrikelnummer_in_binary">(Quersumme der Matrikelnummer in binary)</string>
</resources>